--- a/index.html
+++ b/index.html
@@ -219,207 +219,7 @@
     <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
       <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-      <!-- (qui rimane esattamente la sezione Portfolio che mi hai approvato) -->
-      <!-- ... tutta la parte con i 4 progetti come da tuo messaggio precedente ... -->
-
-    </div>
-  </section>
-
-  <footer>
-    © 2025 · Lucrezia Dori — Tutti i diritti riservati
-  </footer>
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lucrezia Dori – Portfolio e Curriculum</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Montserrat', sans-serif;
-      background-color: #ffffff;
-      color: #1e1e1e;
-      margin: 0;
-      padding: 0;
-      line-height: 1.6;
-      scroll-behavior: smooth;
-    }
-
-    header {
-      text-align: center;
-      padding: 80px 20px 40px;
-    }
-
-    header h1 {
-      font-size: 2.8rem;
-      font-weight: 600;
-      margin-bottom: 0.2rem;
-      letter-spacing: 1px;
-      color: #2f3e35;
-    }
-
-    header h2 {
-      font-size: 1.2rem;
-      font-weight: 300;
-      color: #5e6e61;
-    }
-
-    .contact {
-      margin-top: 20px;
-      font-size: 0.95rem;
-      color: #444;
-    }
-
-    a {
-      color: #38543a;
-      text-decoration: none;
-      transition: color 0.3s ease, transform 0.2s ease;
-    }
-
-    a:hover {
-      color: #1a3a2a;
-      text-decoration: underline;
-      transform: translateY(-1px);
-    }
-
-    .social-icons {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-    }
-
-    .social-icons a {
-      display: inline-block;
-      font-size: 1.3rem;
-      color: #38543a;
-      transition: color 0.3s ease, transform 0.2s ease;
-    }
-
-    .social-icons a:hover {
-      color: #1a3a2a;
-      transform: scale(1.1);
-    }
-
-    .social-icons svg {
-      width: 24px;
-      height: 24px;
-      vertical-align: middle;
-    }
-
-    section {
-      max-width: 950px;
-      margin: 60px auto;
-      padding: 0 25px;
-    }
-
-    section h2 {
-      font-size: 1.3rem;
-      letter-spacing: 2px;
-      border-bottom: 2px solid #c8d8c2;
-      padding-bottom: 8px;
-      color: #2f3e35;
-    }
-
-    ul { list-style: none; padding: 0; }
-    li { margin-bottom: 10px; }
-
-    /* PORTFOLIO */
-    #portfolio {
-      background-color: #f9f9f7;
-      padding: 70px 0;
-    }
-
-    .portfolio-slider {
-      display: flex;
-      overflow-x: auto;
-      gap: 12px;
-      scroll-behavior: smooth;
-      padding-bottom: 10px;
-    }
-
-    .portfolio-slider::-webkit-scrollbar {
-      height: 8px;
-    }
-    .portfolio-slider::-webkit-scrollbar-thumb {
-      background: #c5d3c2;
-      border-radius: 10px;
-    }
-
-    .portfolio-slider img {
-      height: 400px;
-      border-radius: 12px;
-      object-fit: cover;
-    }
-
-    .portfolio-item {
-      margin-bottom: 80px;
-    }
-
-    .portfolio-item h3 {
-      color: #2f3e35;
-      font-size: 1.4rem;
-    }
-
-    .portfolio-item p {
-      color: #4f5d4f;
-      line-height: 1.6;
-      font-weight: 300;
-    }
-
-    .download-btn {
-      display: inline-block;
-      margin-top: 15px;
-      background-color: #8fae91;
-      color: white;
-      padding: 10px 22px;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: background-color 0.3s;
-    }
-
-    .download-btn:hover {
-      background-color: #7da480;
-    }
-
-    footer {
-      text-align: center;
-      font-size: 0.85rem;
-      color: #777;
-      padding: 40px 10px;
-      margin-top: 60px;
-      border-top: 1px solid #eee;
-    }
-  </style>
-</head>
-
-<body>
-  <header>
-    <h1>Lucrezia Dori</h1>
-    <h2>Designer / 3D Artist</h2>
-    <p class="contact">
-      📞 339 33133592 · 📧 <a href="mailto:lucrezia.dori99@gmail.com">lucrezia.dori99@gmail.com</a><br>
-      📍 Cavriglia (AR) · 19/02/1999
-    </p>
-
-    <div class="social-icons">
-      <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" aria-label="YouTube">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M21.8 8s-.2-1.5-.8-2.1c-.7-.8-1.5-.8-1.8-.9C16.5 4.8 12 4.8 12 4.8h-.1s-4.5 0-7.1.2c-.3 0-1.1.1-1.8.9C2.4 6.5 2.2 8 2.2 8S2 9.8 2 11.5v1c0 1.7.2 3.5.2 3.5s.2 1.5.8 2.1c.7.8 1.7.8 2.1.9 1.5.1 6.9.2 6.9.2s4.5 0 7.1-.2c.3 0 1.1-.1 1.8-.9.6-.6.8-2.1.8-2.1s.2-1.8.2-3.5v-1c0-1.7-.2-3.5-.2-3.5zM9.8 14.8V9.2l5.3 2.8l-5.3 2.8z"/>
-        </svg>
-      </a>
-    </div>
-  </header>
-
-  <!-- ===================== -->
-  <!--       PORTFOLIO      -->
-  <!-- ===================== -->
-  <section id="portfolio">
-    <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
-      <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
-
+      <!-- ===================== -->
       <!-- PROGETTO TESI -->
       <div class="portfolio-item">
         <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
@@ -439,6 +239,7 @@
         <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
       </div>
 
+      <!-- ===================== -->
       <!-- PROGETTO FOTOGRAFIA -->
       <div class="portfolio-item">
         <h3>Progetto Fotografico — Autoritratti e Luce</h3>
@@ -465,22 +266,20 @@
           In stampa, il bianco si trasforma in assenza visiva, evocando un’immagine che esiste soltanto come presenza luminosa: 
           un dialogo tra corpo, spazio e materia immateriale.
         </p>
-        <p>
-          <em>
-            “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, 
-            quando contempliamo le bianche profondità della Via Lattea? 
-            O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; 
-            è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – 
-            un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
-          </em><br>
-          — <strong>Herman Melville, Moby Dick, capitolo 42</strong>
-        </p>
+        <p><em>
+          “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, 
+          quando contempliamo le bianche profondità della Via Lattea? 
+          O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; 
+          è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – 
+          un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
+        </em><br>— <strong>Herman Melville, Moby Dick, capitolo 42</strong></p>
         <p>
           Il progetto ha partecipato al 
           <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
         </p>
       </div>
 
+      <!-- ===================== -->
       <!-- PREMIO ROMETTI -->
       <div class="portfolio-item">
         <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
@@ -514,6 +313,7 @@
         </p>
       </div>
 
+      <!-- ===================== -->
       <!-- PROGETTO OREFICERIA -->
       <div class="portfolio-item">
         <h3>Progetto di Oreficeria — Forme Marine</h3>
@@ -534,15 +334,4 @@
         </p>
         <p>
           Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, 
-          unendo la sensibilità del design contemporaneo alla manualità dell’artigianato orafa. 
-          Il progetto esplora il confine tra natura e artificio, corpo e superficie, oggetto e ornamento.
-        </p>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    © 2025 Lucrezia Dori — Tutti i diritti riservati
-  </footer>
-</body>
-</html>
+          unendo la sensibilità del design contempor
