--- a/index.html
+++ b/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lucrezia Dori – Portfolio e Curriculum</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lucrezia Dori – Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet" />
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
-      background-color: #ffffff;
+      background-color: #fff;
       color: #1e1e1e;
       margin: 0;
       padding: 0;
-      line-height: 1.6;
       scroll-behavior: smooth;
     }
 
     header {
       text-align: center;
-      padding: 80px 20px 40px;
+      padding: 70px 20px 40px;
     }
 
     header h1 {
-      font-size: 2.8rem;
+      font-size: 2.6rem;
       font-weight: 600;
       margin-bottom: 0.2rem;
       letter-spacing: 1px;
@@ -30,7 +29,7 @@
     }
 
     header h2 {
-      font-size: 1.2rem;
+      font-size: 1.1rem;
       font-weight: 300;
       color: #5e6e61;
     }
@@ -53,6 +52,7 @@
       transform: translateY(-1px);
     }
 
+    /* --- icona youtube --- */
     .social-icons {
       margin-top: 10px;
       display: flex;
@@ -81,6 +81,7 @@
       max-width: 950px;
       margin: 60px auto;
       padding: 0 25px;
+      line-height: 1.6;
     }
 
     section h2 {
@@ -95,7 +96,6 @@
     ul { list-style: none; padding: 0; }
     li { margin-bottom: 10px; }
 
-    /* PORTFOLIO */
     #portfolio {
       background-color: #f9f9f7;
       padding: 70px 0;
@@ -135,7 +135,6 @@
 
     .portfolio-item p {
       color: #4f5d4f;
-      line-height: 1.6;
       font-weight: 300;
     }
 
@@ -174,6 +173,7 @@
       📍 Cavriglia (AR) · 19/02/1999
     </p>
 
+    <!-- 🔴 YouTube Icon -->
     <div class="social-icons">
       <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" aria-label="YouTube">
         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
@@ -183,155 +183,6 @@
     </div>
   </header>
 
-  <!-- ===================== -->
-  <!--      CURRICULUM       -->
-  <!-- ===================== -->
-  <section id="curriculum">
-    <h2>Formazione</h2>
-    <ul>
-      <li><strong>2024</strong> – Laurea Magistrale in Design, ISIA Firenze</li>
-      <li><strong>2021</strong> – Laurea Triennale in Design, ISIA Firenze</li>
-      <li><strong>2018</strong> – Diploma Liceo Artistico, indirizzo Design, Arezzo</li>
-    </ul>
-
-    <h2>Esperienze</h2>
-    <ul>
-      <li><strong>2023</strong> – Collaborazione con <em>Luce Atelier</em> (Firenze), sviluppo di concept visivi e prototipazione 3D</li>
-      <li><strong>2022</strong> – Partecipazione al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank">Premio Combat Prize</a> con progetto fotografico personale</li>
-      <li><strong>2021</strong> – Selezione al <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank">Premio Rometti</a> (Umbertide, PG) con progetto in ceramica</li>
-      <li><strong>2020</strong> – Stage formativo presso laboratorio di oreficeria artigianale</li>
-    </ul>
-
-    <h2>Competenze</h2>
-    <ul>
-      <li>Progettazione di prodotto e ricerca sui materiali</li>
-      <li>Modellazione e rendering 3D (Rhinoceros, Blender)</li>
-      <li>Fotografia e direzione dell’immagine</li>
-      <li>Adobe Suite (Photoshop, InDesign, Illustrator)</li>
-      <li>Prototipazione, lavorazione ceramica e oreficeria</li>
-    </ul>
-  </section>
-
-  <!-- ===================== -->
-  <!--       PORTFOLIO       -->
-  <!-- ===================== -->
-  <section id="portfolio">
-    <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
-      <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
-
-      <!-- ===================== -->
-      <!-- PROGETTO TESI -->
-      <div class="portfolio-item">
-        <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
-        <div class="portfolio-slider">
-          <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
-        </div>
-        <p>
-          La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico, ma anche come processo sociale, culturale ed ecologico. 
-          Analizzo come materiali, processi e oggetti possano creare un ponte tra l’uomo e l’ambiente, 
-          ispirandosi ai cicli naturali di nascita, trasformazione e rigenerazione.
-        </p>
-        <p>
-          Il progetto propone il design come <em>atto di cura</em>, capace di ricucire relazioni e promuovere sostenibilità attraverso pratiche attente ai contesti e alle comunità. 
-          La ricerca si muove tra riflessione teorica e sperimentazione progettuale, individuando nel gesto del riparare un valore poetico e politico, 
-          un modo per comprendere la complessità del nostro tempo e generare nuove forme di equilibrio tra uomo e natura.
-        </p>
-        <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
-      </div>
-
-      <!-- ===================== -->
-      <!-- PROGETTO FOTOGRAFIA -->
-      <div class="portfolio-item">
-        <h3>Progetto Fotografico — Autoritratti e Luce</h3>
-        <div class="portfolio-slider">
-          <img src="progetto1_fotografia/cover.jpg">
-          <img src="progetto1_fotografia/img2.jpg">
-          <img src="progetto1_fotografia/img3.jpg">
-          <img src="progetto1_fotografia/img4.jpg">
-          <img src="progetto1_fotografia/img5.jpg">
-          <img src="progetto1_fotografia/img6.jpg">
-          <img src="progetto1_fotografia/img9.jpg">
-          <img src="progetto1_fotografia/img10.jpg">
-          <img src="progetto1_fotografia/img12.jpg">
-          <img src="progetto1_fotografia/img13.jpg">
-          <img src="progetto1_fotografia/img14.jpg">
-        </div>
-        <p>
-          Il progetto nasce da una riflessione sulla <strong>radioestesia</strong> — una pratica antica che consiste nel tentare di percepire radiazioni o energie invisibili attraverso strumenti come il pendolo o la verga. 
-          Nata come ricerca sul campo dell’invisibile, la radioestesia evoca un gesto percettivo, un ascolto silenzioso e intuitivo della materia e della luce.
-        </p>
-        <p>
-          Attraverso una serie di <em>autoritratti</em>, utilizzo uno specchio come strumento per riflettere la luce del sole. 
-          Il riflesso, completamente bianco, diventa un <strong>non-colore</strong>, che però contiene in sé tutti i colori dello spettro. 
-          In stampa, il bianco si trasforma in assenza visiva, evocando un’immagine che esiste soltanto come presenza luminosa: 
-          un dialogo tra corpo, spazio e materia immateriale.
-        </p>
-        <p><em>
-          “È forse perché con la sua indefinitezza, adombra i vuoti e le immensità disumane dell’universo e, in tal modo, ci colpisce alle spalle con il pensiero dell’annullamento, 
-          quando contempliamo le bianche profondità della Via Lattea? 
-          O è forse perché, nella sua essenza, il bianco non è tanto un colore quanto l’assenza visibile del colore e, al tempo stesso, la fusione di tutti i colori; 
-          è forse per questi motivi che c’è una così muta vacuità, piena di significato, in un vasto paesaggio nevoso – 
-          un incolore onnicolore d’ateismo dal quale rifuggiamo?…”
-        </em><br>— <strong>Herman Melville, Moby Dick, capitolo 42</strong></p>
-        <p>
-          Il progetto ha partecipato al 
-          <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.
-        </p>
-      </div>
-
-      <!-- ===================== -->
-      <!-- PREMIO ROMETTI -->
-      <div class="portfolio-item">
-        <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
-        <div class="portfolio-slider">
-          <img src="premio_rometti_ceramica/cover.jpg">
-          <img src="premio_rometti_ceramica/img1.jpg">
-          <img src="premio_rometti_ceramica/img3.jpg">
-          <img src="premio_rometti_ceramica/img4.jpg">
-          <img src="premio_rometti_ceramica/img5.jpg">
-          <img src="premio_rometti_ceramica/img6.jpg">
-        </div>
-        <p>
-          Mi sono ispirata alle opere del fotografo tedesco <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”, 
-          presentando una natura intrinsecamente artistica, produttrice di forme organiche e funzionali. 
-          Le sue immagini svelano una ritmicità geometrica nella crescita delle piante, una logica interna che unisce estetica e necessità vitale.
-        </p>
-        <p>
-          Gli <em>equiseti</em> fotografati da Blossfeldt, isolati dal loro contesto naturale, diventano simboli di una forma ornamentale, 
-          di una natura che si manifesta come arte. 
-          La mia ricerca parte da qui: dal desiderio di recuperare l’elemento naturale per ricrearne l’equilibrio tra <strong>artificio e natura</strong>, 
-          tra oggettualità e organicità. 
-        </p>
-        <p>
-          Il materiale argilloso, modellato e lavorato con sottrazioni successive dopo la tornitura, traduce in forma le <em>dilatazioni e contrazioni</em> tipiche del fiore di equiseto. 
-          Ogni vaso diventa così la sintesi plastica della pianta, un oggetto che trattiene la memoria del gesto e della materia naturale da cui nasce.
-        </p>
-        <p>
-          Il progetto è stato realizzato per la partecipazione al 
-          <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>, 
-          promosso dall’azienda Rometti in Umbria.
-        </p>
-      </div>
-
-      <!-- ===================== -->
-      <!-- PROGETTO OREFICERIA -->
-      <div class="portfolio-item">
-        <h3>Progetto di Oreficeria — Forme Marine</h3>
-        <div class="portfolio-slider">
-          <img src="progetto2_oreficeria/cover.jpg">
-          <img src="progetto2_oreficeria/img1.jpg">
-          <img src="progetto2_oreficeria/img2.jpg">
-          <img src="progetto2_oreficeria/img3.jpg">
-          <img src="progetto2_oreficeria/img4.jpg">
-          <img src="progetto2_oreficeria/img5.jpg">
-          <img src="progetto2_oreficeria/img6.jpg">
-          <img src="progetto2_oreficeria/img7.jpg">
-        </div>
-        <p>
-          Una collezione di anelli ispirati alle <strong>forme naturali marine</strong>, realizzati interamente a mano attraverso la tecnica della <em>cera persa</em>. 
-          Le strutture organiche, modellate come piccole sculture, evocano la morfologia di coralli e conchiglie, 
-          trasformando la materia in preziosa testimonianza del mondo sommerso.
-        </p>
-        <p>
-          Ogni pezzo è unico, modellato per catturare il ritmo naturale delle forme organiche, 
-          unendo la sensibilità del design contempor
+  <!-- resto del tuo codice originale qui -->
+</body>
+</html>
