--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     header {
       text-align: center;
       padding: 80px 20px 40px;
-      position: relative;
     }
 
     header h1 {
@@ -51,18 +50,28 @@
       text-decoration: underline;
     }
 
-    /* Icona YouTube */
-    .youtube-icon {
-      position: absolute;
-      top: 20px;
-      right: 25px;
-      width: 28px;
-      height: 28px;
-      transition: transform 0.2s ease;
+    /* Icona YouTube in stile verde salvia */
+    .youtube-link {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 22px;
+      height: 22px;
+      vertical-align: middle;
+      margin-left: 6px;
+      transition: transform 0.2s ease, opacity 0.2s ease;
+      opacity: 0.8;
     }
 
-    .youtube-icon:hover {
+    .youtube-link svg {
+      fill: #5a7b5d;
+      width: 22px;
+      height: 22px;
+    }
+
+    .youtube-link:hover {
       transform: scale(1.1);
+      opacity: 1;
     }
 
     section {
@@ -153,19 +162,17 @@
 
 <body>
   <header>
-    <!-- Icona YouTube discreta -->
-    <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" class="youtube-icon" title="YouTube">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#FF0000">
-        <path d="M10 15.5v-7l6 3.5-6 3.5z"/>
-        <path d="M21.8 8s-.2-1.5-.8-2.2c-.7-.8-1.6-.8-2-0.9C16.5 4.5 12 4.5 12 4.5h0s-4.5 0-7 .4c-.4 0-1.3.1-2 .9C2.4 6.5 2.2 8 2.2 8S2 9.6 2 11.2v1.6c0 1.6.2 3.2.2 3.2s.2 1.5.8 2.2c.7.8 1.7.8 2.1.9 1.5.1 6.9.4 6.9.4s4.5 0 7-.4c.4 0 1.3-.1 2-.9.6-.7.8-2.2.8-2.2s.2-1.6.2-3.2v-1.6c0-1.6-.2-3.2-.2-3.2z"/>
-      </svg>
-    </a>
-
     <h1>Lucrezia Dori</h1>
     <h2>Designer / 3D Artist</h2>
     <p class="contact">
       📞 339 33133592 · 📧 <a href="mailto:lucrezia.dori99@gmail.com">lucrezia.dori99@gmail.com</a><br>
       📍 Cavriglia (AR) · 19/02/1999
+      <a href="https://www.youtube.com/@lucreziadori4895" target="_blank" class="youtube-link" title="YouTube">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+          <path d="M10 15.5v-7l6 3.5-6 3.5z"/>
+          <path d="M21.8 8s-.2-1.5-.8-2.2c-.7-.8-1.6-.8-2-0.9C16.5 4.5 12 4.5 12 4.5s-4.5 0-7 .4c-.4 0-1.3.1-2 .9C2.4 6.5 2.2 8 2.2 8S2 9.6 2 11.2v1.6c0 1.6.2 3.2.2 3.2s.2 1.5.8 2.2c.7.8 1.7.8 2.1.9 1.5.1 6.9.4 6.9.4s4.5 0 7-.4c.4 0 1.3-.1 2-.9.6-.7.8-2.2.8-2.2s.2-1.6.2-3.2v-1.6c0-1.6-.2-3.2-.2-3.2z"/>
+        </svg>
+      </a>
     </p>
   </header>
 
