--- a/index.html
+++ b/index.html
@@ -197,3 +197,10 @@
   </footer>
 </body>
 </html>
+
+
+  <footer>
+    © 2025 Lucrezia Dori – Tutti i diritti riservati
+  </footer>
+</body>
+</html>
