--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       display: inline-block;
       width: 45px;
       height: 32px;
-      background-color: #8fae91; /* verde salvia */
+      background-color: #8fae91;
       border-radius: 8px;
       position: relative;
       margin-top: 15px;
@@ -119,6 +119,7 @@
     .portfolio-slider::-webkit-scrollbar {
       height: 8px;
     }
+
     .portfolio-slider::-webkit-scrollbar-thumb {
       background: #c5d3c2;
       border-radius: 10px;
@@ -216,9 +217,66 @@
     <div style="max-width: 1100px; margin: 0 auto; padding: 0 20px;">
       <h2 style="text-align:center; font-size:2rem; margin-bottom:50px;">Portfolio</h2>
 
-      <!-- (contenuto portfolio invariato) -->
-      <!-- ... -->
+      <!-- PROGETTO TESI -->
+      <div class="portfolio-item">
+        <h3>Progetto di Tesi — Design come pratica di riparazione</h3>
+        <div class="portfolio-slider">
+          <img src="progetto_tesi/Cover.jpg" alt="Cover tesi">
+        </div>
+        <p>La mia tesi esplora il <strong>design come pratica di riparazione</strong>, intesa non solo in senso tecnico, ma anche come processo sociale, culturale ed ecologico...</p>
+        <a href="progetto_tesi/lucrezia_dori_tesi.pdf" class="download-btn" download>📄 Scarica la tesi</a>
+      </div>
 
+      <!-- PROGETTO FOTOGRAFICO -->
+      <div class="portfolio-item">
+        <h3>Progetto Fotografico — Autoritratti e Luce</h3>
+        <div class="portfolio-slider">
+          <img src="progetto1_fotografia/cover.jpg">
+          <img src="progetto1_fotografia/img2.jpg">
+          <img src="progetto1_fotografia/img3.jpg">
+          <img src="progetto1_fotografia/img4.jpg">
+          <img src="progetto1_fotografia/img5.jpg">
+          <img src="progetto1_fotografia/img6.jpg">
+          <img src="progetto1_fotografia/img9.jpg">
+          <img src="progetto1_fotografia/img10.jpg">
+          <img src="progetto1_fotografia/img12.jpg">
+          <img src="progetto1_fotografia/img13.jpg">
+          <img src="progetto1_fotografia/img14.jpg">
+        </div>
+        <p>Il progetto nasce da una riflessione sulla <strong>radioestesia</strong> — una pratica antica che consiste nel tentare di percepire radiazioni o energie invisibili...</p>
+        <p>Il progetto ha partecipato al <a href="https://www.premiocombat.it/2022/lucrezia-dori-11832" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Combat Prize</a>.</p>
+      </div>
+
+      <!-- PREMIO ROMETTI -->
+      <div class="portfolio-item">
+        <h3>Premio Rometti — Ceramica ispirata alla natura</h3>
+        <div class="portfolio-slider">
+          <img src="premio_rometti_ceramica/cover.jpg">
+          <img src="premio_rometti_ceramica/img1.jpg">
+          <img src="premio_rometti_ceramica/img3.jpg">
+          <img src="premio_rometti_ceramica/img4.jpg">
+          <img src="premio_rometti_ceramica/img5.jpg">
+          <img src="premio_rometti_ceramica/img6.jpg">
+        </div>
+        <p>Mi sono ispirata alle opere del fotografo <strong>Karl Blossfeldt</strong>, il quale indagava visivamente “la formula dei rapporti segreti tra l’arte e la natura”...</p>
+        <p>Il progetto è stato realizzato per la partecipazione al <a href="https://www.rometti.it/it/news/premio-rometti-20-21premio-dei-premitriennale/" target="_blank" style="color:#1a3a2a; font-weight:600;">Premio Rometti</a>.</p>
+      </div>
+
+      <!-- OREFICERIA -->
+      <div class="portfolio-item">
+        <h3>Progetto di Oreficeria — Forme Marine</h3>
+        <div class="portfolio-slider">
+          <img src="progetto2_oreficeria/cover.jpg">
+          <img src="progetto2_oreficeria/img1.jpg">
+          <img src="progetto2_oreficeria/img2.jpg">
+          <img src="progetto2_oreficeria/img3.jpg">
+          <img src="progetto2_oreficeria/img4.jpg">
+          <img src="progetto2_oreficeria/img5.jpg">
+          <img src="progetto2_oreficeria/img6.jpg">
+          <img src="progetto2_oreficeria/img7.jpg">
+        </div>
+        <p>Una collezione di anelli ispirati alle <strong>forme naturali marine</strong>, realizzati interamente a mano attraverso la tecnica della <em>cera persa</em>...</p>
+      </div>
     </div>
   </section>
 
